# SplitForUs

SplitForUS-backend/: auth.py  database.py  main.py  models.py  schemas.py  utils.py
SplitForUS-backend/data/: tables.json
SplitForUS-backend/routes/: auth.py  create.py  expense.py  join.py  table.py
SplitForUs/: CMakeLists.txt  main.cpp  mainwindow.h  resources.qrc  splashscreen.cpp  splashscreen.h  splashscreen.ui  startdialog.cpp  startdialog.h  startdialog.ui
